--- a/my-cyber-blog/src/pages/blog.njk
+++ b/my-cyber-blog/src/pages/blog.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-title: Blog
-description: Thoughts, tutorials, and notes on web development.
+title: Blog/Field Notebook
+description: Resreach into various fields of Science.
 permalink: /blog/
 ---
 
