--- a/my-cyber-blog/src/pages/index.njk
+++ b/my-cyber-blog/src/pages/index.njk
@@ -11,15 +11,16 @@ permalink: /index.html
   <div class="container max-w-3xl">
     <div class="space-y-6">
       <p class="text-lg md:text-xl text-zinc-600 dark:text-zinc-400">
-        No woman no cry
+        Hello I am fermionicplants or
       </p>
 
       <h1 class="text-4xl md:text-6xl font-bold">
-        <span class="text-primary-500">Cyber Kirby</span>
+        <span class="text-primary-500">Cyber_Kirby</span>
       </h1>
 
       <p class="text-xl md:text-2xl text-zinc-700 dark:text-zinc-300 leading-relaxed">
-        this blog is from cyberbanana, I'm not reinventing the wheel, I'm making nuclear reactors.
+        this blog is from cyberbanana, I'm not reinventing the wheel, I'm making nuclear reactors,
+        custom sensors and playing with all the tools available to me and my team.
       </p>
 
       <p class="text-lg text-zinc-600 dark:text-zinc-400 leading-relaxed">
