--- a/my-cyber-blog/src/pages/projects.njk
+++ b/my-cyber-blog/src/pages/projects.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-title: Projects
-description: A collection of things I've built, contributed to, or tinkered with.
+title: Projects / Portfolio
+description: A repository of the projects this team has engaged with.
 pagination:
   data: collections.projects
   size: 10
