--- a/my-cyber-blog/src/pages/index.njk
+++ b/my-cyber-blog/src/pages/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 title: Home
-description: A cyberpunk-themed 11ty starter for developers. Showcase your projects and share your coding journey.
+description: justin i figured it out
 permalink: /index.html
 ---
 {% from "_components/index.njk" import button, badge %}
