--- a/my-cyber-blog/src/pages/index.njk
+++ b/my-cyber-blog/src/pages/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 title: Home
-description: justin i figured it out
+description: tired 
 permalink: /index.html
 ---
 {% from "_components/index.njk" import button, badge %}
