--- a/my-cyber-blog/src/_includes/partials/footer.njk
+++ b/my-cyber-blog/src/_includes/partials/footer.njk
@@ -7,7 +7,7 @@
       {# Terminal header #}
       <div class="flex items-center gap-2 mb-6 pb-4 border-b border-primary-500/20">
         <span class="w-3 h-3 bg-red-500"></span>
-        <span class="w-3 h-3 bg-yellow-500"></span>
+        <span class="w-3 h-3 bg-emerald-500"></span>
         <span class="w-3 h-3 bg-green-500"></span>
         <span class="ml-2 text-zinc-500">~/cyber-banana</span>
       </div>
